--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/pubs">Publications</a>
             <a href="{{ site.baseurl }}/people">People</a>
+            <a href="{{ site.baseurl }}/photos">Photos</a>
           </nav>
         </header>
       </div>
