--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/pubs">Publications</a>
-            <a href="{{ site.baseurl }}/people">People</a>
+            <a href="{{ site.baseurl }}/pubs">Projects</a>
             <a href="{{ site.baseurl }}/photos">Photos</a>
           </nav>
         </header>
